oxiplate-derive/tests/broken/if/branches-after-else.stderr
error: `else` already present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:10:1
   |
10 | {% else %}
   | ^^^^^^^^^^

error: `else` already present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:12:1
   |
12 | {% else %}
   | ^^^^^^^^^^

error: `else` previously present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:14:1
   |
14 | {% elseif foo %}
   | ^^^^^^^^^^^^^^^^

error: `else` previously present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:16:1
   |
16 | {% elseif foo %}
   | ^^^^^^^^^^^^^^^^

error: Unexpected 'else' statement
  --> tests/broken/if/branches-after-else.rs:19:1
   |
19 | {% else %}"
   | ^^^^^^^^^^
